fix: change padding and add overflow property to #book-list li

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ button {
 
 html {
   -webkit-text-size-adjust: 100%; /*prevents text size from being automatically adjusted on mobile landscape orientation */
-} 
+}
 
 .flex {
   display: flex;
@@ -171,6 +171,7 @@ header input[type='text'] {
   align-items: center;
   padding: 1.2rem 0 1.2rem 2.4rem;
   border-left: 4px solid var(--primary-color);
+  overflow: auto;  
 }
 
 #book-list li.hide {
@@ -304,7 +305,7 @@ li.active,
 
 .instructions.show,
 .validation.show {
-  display: flex;  
+  display: flex;
 }
 
 .instructions {
@@ -357,7 +358,9 @@ li.active,
 
 /*media queries*/
 @media (max-width: 450px) {
-  
+  #book-list li {
+    padding-right: 1.6rem;
+  }
 
   .add-book .btn {
     margin-top: 0.8rem;
